--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "migrate": "npx sequelize-cli db:migrate",
     "drop": "npx sequelize-cli db:drop",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "npx sequelize-cli db:seed:all"
+    "seed": "npx sequelize-cli db:seed:all",
+    "start":"nodemon"
   },
   "author": "Joshua Fradejas",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "express": "^4.17.3",
     "express-fileupload": "^1.4.0",
     "fetch": "^1.1.0",
+    "heroku": "^7.66.4",
     "image-data-uri": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-claims": "^1.0.1",
