--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "drop": "npx sequelize-cli db:drop",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "npx sequelize-cli db:seed:all",
-    "start":"node app.js"
+    "start":"nodemon"
   },
   "author": "Joshua Fradejas",
   "license": "ISC",
