--- a/.env
+++ b/.env
@@ -12,15 +12,15 @@ SOCKET_PORT=5000
 
 DB_CONNECTION=mysql
 
-DB_HOST=127.0.0.1
+DB_HOST=db4free.net
 
 DB_PORT=3306
 
-DB_DATABASE=dxdb_dev
+DB_DATABASE=dxdb_test
 
-DB_USERNAME=root
+DB_USERNAME=jamesgalima123
 
-DB_PASSWORD=123123123
+DB_PASSWORD=cj012610
 
 TOKEN_KEY=aFQkGPhpuGzAjCgqRncd
 TOKEN_EXPIRATION=60
